<resources>
    <string name="app_name">MyMusicPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="previousSong">prev</string>
    <string name="moveForward">+10</string>
    <string name="moveBack">-10</string>
    <string name="nextSong">next</string>
    <string name="defaultElapsedTime">0:00</string>
    <string name="defaultRemainingTime">-0:00</string>
</resources>